# nitro-enclave-test

./: .gitignore  CMakeLists.txt  Dockerfile  README.md
build-enclave-standalone/: sum5_enclave
build-parent-standalone/: sum5_parent
enclave/: CMakeLists.txt  Dockerfile
enclave/proto/: sum5.proto
enclave/src/: main.cpp
parent/: CMakeLists.txt  Dockerfile
parent/src/: main.cpp  main_stub.cpp
src/: main.cpp  main_stub.cpp
